--- a/index.html
+++ b/index.html
@@ -23,16 +23,21 @@
 </head>
 
 <body>
+
   <header>
     <div class="content-wrapper">
+
       <a href="#"><img src="" alt="unplugged logo"></a>
+
       <div class="header-divider"></div>
+
       <nav>
         <ul>
           <li><a href="faq/index.html" target="_blank">FAQ</a></li>
           <li><a href="about/index.html" target="_blank">About</a></li>
         </ul>
       </nav>
+
     </div>
   </header>
 
@@ -63,17 +68,77 @@
 
     </aside>
 
+    <section class="features">
+
+      <div class="content-wrapper">
+
+        <h2>Have the work week you always dreamed of &mdash; without the bad wifi.</h2>
+
+        <div class="features-items">
+
+          <article>
+            <p class="fontawesome-icon"></p>
+            <p class ="features-item-description">Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.</p>
+          </article>
+
+          <article>
+            <p class="fontawesome-icon"></p>
+            <p class="features-item-description">12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4 breakout rooms.</p>
+          </article>
+
+          <article>
+            <p class="fontawesome-icon"></p>
+            <p class="features-item-description">Private chef team providing on demand meals - just like your team kitchen.</p>
+          </article>
+
+          <article>
+            <p class="fontawesome-icon"></p>
+            <p class="features-item-description">5 outdoor obstacle courses, including private beach 1/2 mile from bungalow.</p>
+          </article>
+
+          <article>
+            <p class="fontawesome-icon"></p>
+            <p class="features-item-description">Retreat facilitator to manage your day to day activities so you all get a chance to rest.</p>
+          </article>
+
+          <article>
+            <p class="fontawesome-icon"></p>
+            <p class="features-item-description">Dedicated computer room for times that you must wifi.</p>
+          </article>
+
+        </div>
+
+      </div>
+
+    </section>
+
+    <section class="reviews">
+      
+      <div class="content-wrapper">
+        
+        <h2>Be a better team in 5 days, like these.</h2>
+
+        <article>
+          <div>
+            <h3>LaCrue Bottling Co. October 2017</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur ut nisl sed tellus pulvinar pretium id vel velit. Vivamus sodales sodales odio, sit amet molestie tellus eleifend vitae. Proin in iaculis nibh, vitae imperdiet est. Nulla lacinia diam lectus, sed efficitur lectus aliquam at.</p>
+        </article>
+
+      </div>
+
+    </section>
+
   </main>
 
   <footer>
     <div class="content-wrapper">
         <div class="footer-content">
           <address class="contact">
-            <h3>Contact</h3>
+            <h4>Contact</h4>
             <p>555-555-5555<br><a href="mailto:">hello@unplugged.com</a>
           </address>
           <div class="social">
-            <h3>Social</h3>
+            <h4>Social</h4>
             <div class="social-icons">
               <p><a href="https://www.facebook.com/yoursite" target="_blank"></a></p>
               <p><a href="https://www.twitter.com/yoursite" target="_blank"></a></p>
@@ -84,8 +149,7 @@
       </div>
 
       <div class="copyright">
-        <p>Copyright 2020</p>
-        <p>Unplugged</p>
+        <p>Copyright 2020 | Unplugged</p>
       </div>
   </footer>
 
