--- a/about/index.html
+++ b/about/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Unplugged | About</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -24,8 +24,87 @@
 
 <body>
 
-  <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+  <header>
+    <div class="content-wrapper">
+
+      <a href="#"><img src="" alt="unplugged logo"></a>
+
+      <div class="header-divider"></div>
+
+      <nav>
+        <ul>
+          <li><a href="../faq/index.html" target="_blank">FAQ</a></li>
+          <li><a href="index.html" target="_blank">About</a></li>
+        </ul>
+      </nav>
+
+    </div>
+  </header>
+
+  <main>
+
+    <section class="mission">
+      <div class="content-wrapper">
+          <h2>Our Mission - we want to make you the team you always wanted to be.</h2>
+          <div class="mission-content">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec et varius eros, at mollis tellus. Cras rutrum arcu lorem, nec scelerisque mi molestie eget. Integer hendrerit lectus efficitur metus pulvinar interdum. Vestibulum elementum consequat lacus ac dictum.</p>
+            <p>Phasellus at sapien magna. Cras et nulla ultricies, euismod erat quis, finibus magna. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
+          </div>
+      </div>
+    </section>
+
+    <section class="map">
+      <figure>
+        
+      </figure>
+    </section>
+
+    <section class="contact-section">
+      <div class="content-wrapper">
+        <h2>Contact us, because you all need this.</h2>
+        
+        <address class="contact-content">
+          <div>
+            <h4>General Information</h4>
+            <p>333 Main St, Lake Geneva, WI 53147<br>
+            555-555-5555<br>
+            hello@unplugged.com</p>
+          </div>
+
+          <div>
+            <h4>Chat with a Facilitator</h4>
+            <p>555-555-5555<br>
+            facilitator@unplugged.com</p>
+          </div>
+        </address> <!-- contact-content div ends -->
+      </div> <!-- content-wrapper div ends -->
+    </section>
+
+  </main>
+
+  <footer>
+    <div class="content-wrapper">
+        <div class="footer-content">
+          <address class="contact">
+            <h4>Contact</h4>
+            <p>555-555-5555<br>hello@unplugged.com</p>
+          </address>
+          <div class="social">
+            <h4>Social</h4>
+            <div class="social-icons">
+              <p><a href="https://www.facebook.com/yoursite" target="_blank"></a></p>
+              <p><a href="https://www.twitter.com/yoursite" target="_blank"></a></p>
+              <p><a href="https://www.instagram.com/yoursite" target="_blank"></a></p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="copyright">
+        <p>Copyright 2020 | Unplugged</p>
+      </div>
+  </footer>
+
   <script src="../js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="../js/plugins.js"></script>
   <script src="../js/main.js"></script>
