--- a/faq/index.html
+++ b/faq/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Unplugged | FAQ</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -24,9 +24,78 @@
 
 <body>
 
-  <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
-  <script src="../js/vendor/modernizr-3.11.2.min.js"></script>
+<header>
+    <div class="content-wrapper">
+
+      <a href="#"><img src="" alt="unplugged logo"></a>
+
+      <div class="header-divider"></div>
+
+      <nav>
+        <ul>
+          <li><a href="../faq/index.html" target="_blank">FAQ</a></li>
+          <li><a href="index.html" target="_blank">About</a></li>
+        </ul>
+      </nav>
+
+    </div>
+  </header>
+
+  <main>
+
+    <section class="faq">
+      <div class="content-wrapper">
+          <h2>Frequently Asked Questions</h2>
+          
+          <div class="faq-content">
+            <h4>How do I get to the Unplugged retreat?</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi sapien dui, blandit in nulla nec, bibendum finibus ipsum. Morbi eu fermentum ipsum. Nullam id ipsum massa. In consectetur lacinia magna.</p>
+          </div>
+
+          <div class="faq-content">
+            <h4>What kind of team is right for the Unplugged retreat?</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi sapien dui, blandit in nulla nec, bibendum finibus ipsum. Morbi eu fermentum ipsum. Nullam id ipsum massa. In consectetur lacinia magna.</p>
+          </div>
+
+          <div class="faq-content">
+            <h4>What size teams can you accommodate?</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi sapien dui, blandit in nulla nec, bibendum finibus ipsum. Morbi eu fermentum ipsum. Nullam id ipsum massa. In consectetur lacinia magna.</p>
+          </div>
+
+          <div class="faq-content">
+            <h4>Is there really no wifi available?</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi sapien dui, blandit in nulla nec, bibendum finibus ipsum. Morbi eu fermentum ipsum. Nullam id ipsum massa. In consectetur lacinia magna.</p>
+          </div>
+
+      </div>
+    </section>
+
+  </main>
+
+  <footer>
+    <div class="content-wrapper">
+        <div class="footer-content">
+          <address class="contact">
+            <h4>Contact</h4>
+            <p>555-555-5555<br>hello@unplugged.com</p>
+          </address>
+          <div class="social">
+            <h4>Social</h4>
+            <div class="social-icons">
+              <p><a href="https://www.facebook.com/yoursite" target="_blank"></a></p>
+              <p><a href="https://www.twitter.com/yoursite" target="_blank"></a></p>
+              <p><a href="https://www.instagram.com/yoursite" target="_blank"></a></p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="copyright">
+        <p>Copyright 2020 | Unplugged</p>
+      </div>
+  </footer>
+
+
   <script src="../js/plugins.js"></script>
   <script src="../js/main.js"></script>
 
