Updated first mission paragraph

--- a/about/index.html
+++ b/about/index.html
@@ -47,7 +47,7 @@
       <div class="content-wrapper">
           <h2>Our Mission - we want to make you the team you always wanted to be.</h2>
           <div class="mission-content">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec et varius eros, at mollis tellus. Cras rutrum arcu lorem, nec scelerisque mi molestie eget. Integer hendrerit lectus efficitur metus pulvinar interdum. Vestibulum elementum consequat lacus ac dictum.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec et varius eros, at mollis tellus. Cras rutrum arcu lorem, nec scelerisque mi molestie eget. Integer hendrerit lectus efficitur metus pulvinar.</p>
             <p>Phasellus at sapien magna. Cras et nulla ultricies, euismod erat quis, finibus magna. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
           </div>
       </div>
