--- a/faq/index.html
+++ b/faq/index.html
@@ -20,7 +20,7 @@
   <link rel="stylesheet" href="../css/main.css">
 
   <meta name="theme-color" content="#fafafa">
-  
+
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">
 </head>
@@ -37,7 +37,7 @@
       <nav>
         <ul>
           <li><a href="index.html" target="_blank">FAQ</a></li>
-          <li><a href="../about/index.html" target="_blank">About</a></li>
+          <li><a href="../about/index.html" target="_blank">ABOUT</a></li>
         </ul>
       </nav>
 
