Added figures and background images

--- a/index.html
+++ b/index.html
@@ -29,9 +29,12 @@
 
   <header>
     <div class="content-wrapper">
-
-      <a href="#"><img src="" alt="unplugged logo"></a>
-
+      <figure>
+        <a href="#">
+          <img src="img/unplugged-logo.png" alt="unplugged logo">
+        </a>
+      </figure>
+      
       <div class="header-divider"></div>
 
       <nav>
@@ -122,6 +125,11 @@
         <h2>Be a better team in 5 days, like these.</h2>
 
         <article>
+
+          <figure>
+          <img src="img/unplugged-reviews.jpg" alt="LaCrue Team Photo">
+          </figure>
+
           <div>
             <h3>LaCrue Bottling Co. October 2017</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur ut nisl sed tellus pulvinar pretium id vel velit. Vivamus sodales sodales odio, sit amet molestie tellus eleifend vitae. Proin in iaculis nibh, vitae imperdiet est. Nulla lacinia diam lectus, sed efficitur lectus aliquam at.</p>
