Added iframe tag and styles

--- a/about/index.html
+++ b/about/index.html
@@ -58,7 +58,7 @@
 
     <section class="map">
       <figure>
-        
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3273.7197275630974!2d-81.8426097494569!3d34.86326908029675!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8857a1b944509001%3A0x1def65f403a0c1e2!2sCroft%20State%20Park!5e0!3m2!1sen!2sus!4v1596033647530!5m2!1sen!2sus" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
       </figure>
     </section>
 
