Added icon font tags and styles

--- a/faq/index.html
+++ b/faq/index.html
@@ -21,6 +21,9 @@
 
   <meta name="theme-color" content="#fafafa">
 
+  <!-- Font Awesome -->
+  <script src="https://kit.fontawesome.com/b99110280a.js" crossorigin="anonymous"></script>
+
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">
 </head>
