--- a/faq/index.html
+++ b/faq/index.html
@@ -33,7 +33,11 @@
 <header>
     <div class="content-wrapper">
 
-      <a href="#"><img src="" alt="unplugged logo"></a>
+      <figure>
+        <a href="#">
+          <img src="../img/unplugged-logo.png" alt="unplugged logo">
+        </a>
+      </figure>
 
       <div class="header-divider"></div>
 
@@ -88,9 +92,9 @@
           <div class="social">
             <h4>Social</h4>
             <div class="social-icons">
-              <p><a href="https://www.facebook.com/yoursite" target="_blank"></a></p>
-              <p><a href="https://www.twitter.com/yoursite" target="_blank"></a></p>
-              <p><a href="https://www.instagram.com/yoursite" target="_blank"></a></p>
+              <p><a href="https://www.facebook.com/yoursite" target="_blank"><i class="fab fa-facebook"></i></a></p>
+              <p><a href="https://www.twitter.com/yoursite" target="_blank"><i class="fab fa-twitter"></i></a></p>
+              <p><a href="https://www.instagram.com/yoursite" target="_blank"><i class="fab fa-instagram"></i></a></p>
             </div>
           </div>
         </div>
