Adjusted margin, links, and text sizes

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <header>
     <div class="content-wrapper">
       <figure>
-        <a href="#">
+        <a href="index.html">
           <img src="img/unplugged-logo.png" alt="unplugged logo">
         </a>
       </figure>
@@ -146,7 +146,7 @@
           </figure>
 
           <div>
-            <h3>LaCrue Bottling Co. October 2017</h3>
+            <h3>LaCrue Bottling Co. <br>October 2017</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur ut nisl sed tellus pulvinar pretium id vel velit. Vivamus sodales sodales odio, sit amet molestie tellus eleifend vitae. Proin in iaculis nibh, vitae imperdiet est. Nulla lacinia diam lectus, sed efficitur lectus aliquam at.</p>
         </article>
 
