--- a/faq/index.html
+++ b/faq/index.html
@@ -34,7 +34,7 @@
     <div class="content-wrapper">
 
       <figure>
-        <a href="#">
+        <a href="../index.html">
           <img src="../img/unplugged-logo.png" alt="unplugged logo">
         </a>
       </figure>
